--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,145 @@
-.App {
-  text-align: center;
+/* Variables */
+:root {
+  --container-border-thicknes: 11.5vh;
+  --center-strip-thicknes: 7.8vh;
+  --teal: #80cbc4;
+  --black: #000;
+  --horizontal-gradient: linear-gradient(#80cbc4 30%, #000 100%);
+  --vertical-gradient: linear-gradient(0.25turn, #80cbc4 30%, #000 100%);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  background: white;
+  height: 100vh;
+  width: 100vw;
+  box-sizing: border-box;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+@media (min-width: 1025px) {
+  .container {
+    padding: 96px;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content {
+  background: var(--teal);
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+
+.top-block {
+  background: var(--horizontal-gradient);
+  position: absolute;
+  top: 0;
+  width: calc(100% - (var(--container-border-thicknes) * 2));
+  height: var(--container-border-thicknes);
+}
+
+.right-block {
+  background: var(--vertical-gradient);
+  width: var(--container-border-thicknes);
+  height: 100%;
+  position: absolute;
+  right: 0;
+}
+
+.bottom-block {
+  background: var(--horizontal-gradient);
+  position: absolute;
+  bottom: 0;
+  width: calc(100% - (var(--container-border-thicknes) * 2));
+  height: var(--container-border-thicknes);
+}
+
+.left-block {
+  background: var(--vertical-gradient);
+  width: var(--container-border-thicknes);
+  height: 100%;
+  position: absolute;
+  left: 0;
+}
+
+.center-left-block {
+  width: 50%;
+  background: linear-gradient(0.25turn, #80cbc4 55%, #000 80%);
+  height: 100%;
+  position: absolute;
+  left: 0;
+}
+
+.center-right-block {
+  width: 50%;
+  background: linear-gradient(0.25turn, #80cbc4 40%, #000 60%);
+  height: 100%;
+  position: absolute;
+  right: 0;
+}
+
+.center-right-stripe {
+  background: var(--teal);
+  position: absolute;
+  width: var(--center-strip-thicknes);
+  height: 100%;
+  top: 0;
+  left: 50%;
+}
+
+.center-left-stripe {
+  background: var(--black);
+  position: absolute;
+  width: var(--center-strip-thicknes);
+  height: 100%;
+  top: 0;
+  right: 50%;
+}
+
+.top-left-triangle {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: var(--container-border-thicknes);
+  height: var(--container-border-thicknes);
+  background: var(--horizontal-gradient);
+  clip-path: polygon(0% 0%, 100% 100%, 100% 0%, 100% 0%);
+}
+
+.top-right-triangle {
+  background: var(--horizontal-gradient);
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: var(--container-border-thicknes);
+  height: var(--container-border-thicknes);
+  clip-path: polygon(0% 0%, 0% 100%, 100% 0%, 100% 0%);
+}
+
+.bottom-left-triangle {
+  background: var(--horizontal-gradient);
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: var(--container-border-thicknes);
+  height: var(--container-border-thicknes);
+  clip-path: polygon(100% 100%, 100% 0%, 0% 100%, 0% 100%);
+}
+
+.bottom-right-triangle {
+  background: var(--horizontal-gradient);
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: var(--container-border-thicknes);
+  height: var(--container-border-thicknes);
+  clip-path: polygon(100% 100%, 0% 0%, 0% 100%, 0% 100%);
+}
+
+.logo {
+  position: absolute;
+  fill: white;
 }
